--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -228,7 +228,6 @@
     <Compile Include="Helpers\CustomRoleProvider.cs" />
     <Compile Include="Helpers\DateTimeValidation.cs" />
     <Compile Include="Helpers\IAuditEntity.cs" />
-    <Compile Include="Helpers\PartnerFreeSurchargeFeeContractCalculation.cs" />
     <Compile Include="Helpers\WhoInitiateDayClsed.cs" />
     <Compile Include="Helpers\ISoftDeleted.cs" />
     <Compile Include="Helpers\MapFrom.cs" />
@@ -582,6 +581,10 @@
     <Compile Include="Migrations\201710132121410_modifiedTerminalAlert.cs" />
     <Compile Include="Migrations\201710132121410_modifiedTerminalAlert.Designer.cs">
       <DependentUpon>201710132121410_modifiedTerminalAlert.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201710172032557_PartnerUpdate.cs" />
+    <Compile Include="Migrations\201710172032557_PartnerUpdate.Designer.cs">
+      <DependentUpon>201710172032557_PartnerUpdate.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\AddNewPartner.cs" />
     <Compile Include="Migrations\AddNewPartner.Designer.cs">
@@ -1274,6 +1277,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201710132121410_modifiedTerminalAlert.resx">
       <DependentUpon>201710132121410_modifiedTerminalAlert.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710172032557_PartnerUpdate.resx">
+      <DependentUpon>201710172032557_PartnerUpdate.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\AddNewPartner.resx">
       <DependentUpon>AddNewPartner.cs</DependentUpon>
