--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -820,6 +820,134 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Octagon\assets\bootstrap\css\bootstrap.min.css" />
+    <Content Include="Octagon\assets\bootstrap\js\bootstrap.min.js" />
+    <Content Include="Octagon\assets\css\bootstrap.css" />
+    <Content Include="Octagon\assets\css\bootstrap.min.css" />
+    <Content Include="Octagon\assets\css\Contact-Form-Clean.css" />
+    <Content Include="Octagon\assets\css\Contact-FormModal-Contact-Form-with-Google-Map.css" />
+    <Content Include="Octagon\assets\css\Footer-Basic.css" />
+    <Content Include="Octagon\assets\css\Map-Clean.css" />
+    <Content Include="Octagon\assets\css\Navigation-with-Button1.css" />
+    <Content Include="Octagon\assets\css\styles-1.css" />
+    <Content Include="Octagon\assets\css\styles.css" />
+    <Content Include="Octagon\assets\css\styles.min.css" />
+    <Content Include="Octagon\assets\css\styles2.css" />
+    <Content Include="Octagon\assets\css\untitled-1.css" />
+    <Content Include="Octagon\assets\css\untitled.css" />
+    <Content Include="Octagon\assets\data\flot-data.js" />
+    <Content Include="Octagon\assets\data\morris-data.js" />
+    <Content Include="Octagon\assets\fonts\font-awesome.min.css" />
+    <Content Include="Octagon\assets\fonts\fontawesome-webfont.svg" />
+    <Content Include="Octagon\assets\fonts\simple-line-icons.min.css" />
+    <Content Include="Octagon\assets\fonts\Simple-Line-Icons.svg" />
+    <Content Include="Octagon\assets\img\1.jpg" />
+    <Content Include="Octagon\assets\img\2.jpg" />
+    <Content Include="Octagon\assets\img\3.jpg" />
+    <Content Include="Octagon\assets\img\carousel1.jpg" />
+    <Content Include="Octagon\assets\img\carousel2.jpg" />
+    <Content Include="Octagon\assets\img\carousel3.jpg" />
+    <Content Include="Octagon\assets\img\favicon-32x32.png" />
+    <Content Include="Octagon\assets\img\logo.jpg" />
+    <Content Include="Octagon\assets\img\logo.png" />
+    <Content Include="Octagon\assets\img\map.jpg" />
+    <Content Include="Octagon\assets\js\Contact-FormModal-Contact-Form-with-Google-Map.js" />
+    <Content Include="Octagon\assets\js\jquery.min.js" />
+    <Content Include="Octagon\assets\js\sb-admin-2.js" />
+    <Content Include="Octagon\assets\js\script.min.js" />
+    <Content Include="Octagon\assets\vendor\bootstrap-social\bootstrap-social.css" />
+    <Content Include="Octagon\assets\vendor\bootstrap\css\bootstrap.css" />
+    <Content Include="Octagon\assets\vendor\bootstrap\css\bootstrap.min.css" />
+    <Content Include="Octagon\assets\vendor\bootstrap\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Octagon\assets\vendor\bootstrap\js\bootstrap.js" />
+    <Content Include="Octagon\assets\vendor\bootstrap\js\bootstrap.min.js" />
+    <Content Include="Octagon\assets\vendor\datatables-plugins\dataTables.bootstrap.css" />
+    <Content Include="Octagon\assets\vendor\datatables-plugins\dataTables.bootstrap.js" />
+    <Content Include="Octagon\assets\vendor\datatables-plugins\dataTables.bootstrap.min.js" />
+    <Content Include="Octagon\assets\vendor\datatables-plugins\index.html" />
+    <Content Include="Octagon\assets\vendor\datatables-responsive\dataTables.responsive.css" />
+    <Content Include="Octagon\assets\vendor\datatables-responsive\dataTables.responsive.js" />
+    <Content Include="Octagon\assets\vendor\datatables\css\dataTables.bootstrap.css" />
+    <Content Include="Octagon\assets\vendor\datatables\css\dataTables.bootstrap.min.css" />
+    <Content Include="Octagon\assets\vendor\datatables\css\dataTables.bootstrap4.css" />
+    <Content Include="Octagon\assets\vendor\datatables\css\dataTables.bootstrap4.min.css" />
+    <Content Include="Octagon\assets\vendor\datatables\css\dataTables.foundation.css" />
+    <Content Include="Octagon\assets\vendor\datatables\css\dataTables.foundation.min.css" />
+    <Content Include="Octagon\assets\vendor\datatables\css\dataTables.jqueryui.css" />
+    <Content Include="Octagon\assets\vendor\datatables\css\dataTables.jqueryui.min.css" />
+    <Content Include="Octagon\assets\vendor\datatables\css\dataTables.material.css" />
+    <Content Include="Octagon\assets\vendor\datatables\css\dataTables.material.min.css" />
+    <Content Include="Octagon\assets\vendor\datatables\css\dataTables.semanticui.css" />
+    <Content Include="Octagon\assets\vendor\datatables\css\dataTables.semanticui.min.css" />
+    <Content Include="Octagon\assets\vendor\datatables\css\dataTables.uikit.css" />
+    <Content Include="Octagon\assets\vendor\datatables\css\dataTables.uikit.min.css" />
+    <Content Include="Octagon\assets\vendor\datatables\css\jquery.dataTables.css" />
+    <Content Include="Octagon\assets\vendor\datatables\css\jquery.dataTables.min.css" />
+    <Content Include="Octagon\assets\vendor\datatables\css\jquery.dataTables_themeroller.css" />
+    <Content Include="Octagon\assets\vendor\datatables\images\favicon.ico" />
+    <Content Include="Octagon\assets\vendor\datatables\images\sort_asc.png" />
+    <Content Include="Octagon\assets\vendor\datatables\images\sort_asc_disabled.png" />
+    <Content Include="Octagon\assets\vendor\datatables\images\sort_both.png" />
+    <Content Include="Octagon\assets\vendor\datatables\images\sort_desc.png" />
+    <Content Include="Octagon\assets\vendor\datatables\images\sort_desc_disabled.png" />
+    <Content Include="Octagon\assets\vendor\datatables\js\dataTables.bootstrap.js" />
+    <Content Include="Octagon\assets\vendor\datatables\js\dataTables.bootstrap.min.js" />
+    <Content Include="Octagon\assets\vendor\datatables\js\dataTables.bootstrap4.js" />
+    <Content Include="Octagon\assets\vendor\datatables\js\dataTables.bootstrap4.min.js" />
+    <Content Include="Octagon\assets\vendor\datatables\js\dataTables.foundation.js" />
+    <Content Include="Octagon\assets\vendor\datatables\js\dataTables.foundation.min.js" />
+    <Content Include="Octagon\assets\vendor\datatables\js\dataTables.jqueryui.js" />
+    <Content Include="Octagon\assets\vendor\datatables\js\dataTables.jqueryui.min.js" />
+    <Content Include="Octagon\assets\vendor\datatables\js\dataTables.material.js" />
+    <Content Include="Octagon\assets\vendor\datatables\js\dataTables.material.min.js" />
+    <Content Include="Octagon\assets\vendor\datatables\js\dataTables.semanticui.js" />
+    <Content Include="Octagon\assets\vendor\datatables\js\dataTables.semanticui.min.js" />
+    <Content Include="Octagon\assets\vendor\datatables\js\dataTables.uikit.js" />
+    <Content Include="Octagon\assets\vendor\datatables\js\dataTables.uikit.min.js" />
+    <Content Include="Octagon\assets\vendor\datatables\js\jquery.dataTables.js" />
+    <Content Include="Octagon\assets\vendor\datatables\js\jquery.dataTables.min.js" />
+    <Content Include="Octagon\assets\vendor\datatables\js\jquery.js" />
+    <Content Include="Octagon\assets\vendor\dist\css\sb-admin-2.css" />
+    <Content Include="Octagon\assets\vendor\dist\css\sb-admin-2.min.css" />
+    <Content Include="Octagon\assets\vendor\dist\js\sb-admin-2.js" />
+    <Content Include="Octagon\assets\vendor\dist\js\sb-admin-2.min.js" />
+    <Content Include="Octagon\assets\vendor\flot-tooltip\jquery.flot.tooltip.js" />
+    <Content Include="Octagon\assets\vendor\flot-tooltip\jquery.flot.tooltip.min.js" />
+    <Content Include="Octagon\assets\vendor\flot-tooltip\jquery.flot.tooltip.source.js" />
+    <Content Include="Octagon\assets\vendor\flot\excanvas.js" />
+    <Content Include="Octagon\assets\vendor\flot\excanvas.min.js" />
+    <Content Include="Octagon\assets\vendor\flot\jquery.colorhelpers.js" />
+    <Content Include="Octagon\assets\vendor\flot\jquery.flot.canvas.js" />
+    <Content Include="Octagon\assets\vendor\flot\jquery.flot.categories.js" />
+    <Content Include="Octagon\assets\vendor\flot\jquery.flot.crosshair.js" />
+    <Content Include="Octagon\assets\vendor\flot\jquery.flot.errorbars.js" />
+    <Content Include="Octagon\assets\vendor\flot\jquery.flot.fillbetween.js" />
+    <Content Include="Octagon\assets\vendor\flot\jquery.flot.image.js" />
+    <Content Include="Octagon\assets\vendor\flot\jquery.flot.js" />
+    <Content Include="Octagon\assets\vendor\flot\jquery.flot.navigate.js" />
+    <Content Include="Octagon\assets\vendor\flot\jquery.flot.pie.js" />
+    <Content Include="Octagon\assets\vendor\flot\jquery.flot.resize.js" />
+    <Content Include="Octagon\assets\vendor\flot\jquery.flot.selection.js" />
+    <Content Include="Octagon\assets\vendor\flot\jquery.flot.stack.js" />
+    <Content Include="Octagon\assets\vendor\flot\jquery.flot.symbol.js" />
+    <Content Include="Octagon\assets\vendor\flot\jquery.flot.threshold.js" />
+    <Content Include="Octagon\assets\vendor\flot\jquery.flot.time.js" />
+    <Content Include="Octagon\assets\vendor\flot\jquery.js" />
+    <Content Include="Octagon\assets\vendor\font-awesome\css\font-awesome.css" />
+    <Content Include="Octagon\assets\vendor\font-awesome\css\font-awesome.min.css" />
+    <Content Include="Octagon\assets\vendor\font-awesome\fonts\fontawesome-webfont.svg" />
+    <Content Include="Octagon\assets\vendor\font-awesome\HELP-US-OUT.txt" />
+    <Content Include="Octagon\assets\vendor\jquery\jquery.js" />
+    <Content Include="Octagon\assets\vendor\jquery\jquery.min.js" />
+    <Content Include="Octagon\assets\vendor\metisMenu\metisMenu.css" />
+    <Content Include="Octagon\assets\vendor\metisMenu\metisMenu.js" />
+    <Content Include="Octagon\assets\vendor\metisMenu\metisMenu.min.css" />
+    <Content Include="Octagon\assets\vendor\metisMenu\metisMenu.min.js" />
+    <Content Include="Octagon\assets\vendor\morrisjs\morris.css" />
+    <Content Include="Octagon\assets\vendor\morrisjs\morris.js" />
+    <Content Include="Octagon\assets\vendor\morrisjs\morris.min.js" />
+    <Content Include="Octagon\assets\vendor\raphael\raphael.js" />
+    <Content Include="Octagon\assets\vendor\raphael\raphael.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
@@ -899,6 +1027,64 @@
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Octagon\assets\fonts\fontawesome-webfont.eot" />
+    <Content Include="Octagon\assets\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Octagon\assets\fonts\fontawesome-webfont.woff" />
+    <Content Include="Octagon\assets\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Octagon\assets\fonts\FontAwesome.otf" />
+    <Content Include="Octagon\assets\fonts\Simple-Line-Icons.eot" />
+    <Content Include="Octagon\assets\fonts\Simple-Line-Icons.ttf" />
+    <Content Include="Octagon\assets\fonts\Simple-Line-Icons.woff" />
+    <Content Include="Octagon\assets\fonts\Simple-Line-Icons.woff2" />
+    <Content Include="Octagon\assets\less\mixins.less" />
+    <Content Include="Octagon\assets\less\sb-admin-2.less" />
+    <Content Include="Octagon\assets\less\variables.less" />
+    <Content Include="Octagon\assets\vendor\bootstrap-social\bootstrap-social.less" />
+    <Content Include="Octagon\assets\vendor\bootstrap-social\bootstrap-social.scss" />
+    <Content Include="Octagon\assets\vendor\bootstrap\fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Octagon\assets\vendor\bootstrap\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="Octagon\assets\vendor\bootstrap\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="Octagon\assets\vendor\bootstrap\fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="Octagon\assets\vendor\datatables-responsive\dataTables.responsive.scss" />
+    <Content Include="Octagon\assets\vendor\datatables\images\Sorting icons.psd" />
+    <Content Include="Octagon\assets\vendor\font-awesome\css\font-awesome.css.map" />
+    <Content Include="Octagon\assets\vendor\font-awesome\fonts\fontawesome-webfont.eot" />
+    <Content Include="Octagon\assets\vendor\font-awesome\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Octagon\assets\vendor\font-awesome\fonts\fontawesome-webfont.woff" />
+    <Content Include="Octagon\assets\vendor\font-awesome\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Octagon\assets\vendor\font-awesome\fonts\FontAwesome.otf" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\animated.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\bordered-pulled.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\core.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\extras.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\fixed-width.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\font-awesome.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\icons.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\larger.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\list.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\mixins.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\path.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\rotated-flipped.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\screen-reader.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\spinning.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\stacked.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\variables.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\font-awesome.scss" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\_animated.scss" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\_bordered-pulled.scss" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\_core.scss" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\_extras.scss" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\_fixed-width.scss" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\_icons.scss" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\_larger.scss" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\_list.scss" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\_mixins.scss" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\_path.scss" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\_rotated-flipped.scss" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\_screen-reader.scss" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\_spinning.scss" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\_stacked.scss" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\_variables.scss" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.1.1.js" />
     <Content Include="Scripts\jquery-3.1.1.min.js" />
