--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -587,6 +587,10 @@
     <Compile Include="Migrations\201710172032557_PartnerUpdate.Designer.cs">
       <DependentUpon>201710172032557_PartnerUpdate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710180534471_ElimineTodosLOsCamposUnique.cs" />
+    <Compile Include="Migrations\201710180534471_ElimineTodosLOsCamposUnique.Designer.cs">
+      <DependentUpon>201710180534471_ElimineTodosLOsCamposUnique.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\AddNewPartner.cs" />
     <Compile Include="Migrations\AddNewPartner.Designer.cs">
       <DependentUpon>AddNewPartner.cs</DependentUpon>
@@ -1473,6 +1477,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201710172032557_PartnerUpdate.resx">
       <DependentUpon>201710172032557_PartnerUpdate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710180534471_ElimineTodosLOsCamposUnique.resx">
+      <DependentUpon>201710180534471_ElimineTodosLOsCamposUnique.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\AddNewPartner.resx">
       <DependentUpon>AddNewPartner.cs</DependentUpon>
