--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -1122,12 +1122,12 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_LayoutAdminSB.cshtml" />
     <Content Include="Views\Shared\Sections\Header.cshtml" />
-    <Content Include="Views\Shared\Sections\NavBar.cshtml" />
-    <Content Include="Views\Shared\Sections\Scripts.cshtml" />
-    <Content Include="Views\Shared\Sections\SideBar.cshtml" />
+    <Content Include="Views\Shared\Sections\Old Views\NavBarOLD.cshtml" />
+    <Content Include="Views\Shared\Sections\Old Views\ScriptsOLD.cshtml" />
+    <Content Include="Views\Shared\Sections\Old Views\SideBarOLD.cshtml" />
     <Content Include="Views\Shared\_LayoutHome.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Dashboard\Index.cshtml" />
+    <Content Include="Views\Dashboard\IndexOLD.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Partners\Index.cshtml" />
     <Content Include="Views\Partners\Edit.cshtml" />
@@ -1208,6 +1208,11 @@
     <Content Include="Views\Surcharge\SurchargeForm.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Shared\_LayoutOctagon.cshtml" />
+    <Content Include="Views\Dashboard\Index.cshtml" />
+    <Content Include="Views\Shared\_LayoutDashboard.cshtml" />
+    <Content Include="Views\Shared\Sections\Scripts.cshtml" />
+    <Content Include="Views\Shared\Sections\Sidebar.cshtml" />
+    <Content Include="Views\Shared\Sections\NavBar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
