RemainingSurchargeFee and Remaining Interchange

--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -591,6 +591,10 @@
     <Compile Include="Migrations\201710180534471_ElimineTodosLOsCamposUnique.Designer.cs">
       <DependentUpon>201710180534471_ElimineTodosLOsCamposUnique.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710201826295_RemainingSurchargeFeeAndInterchangeFee.cs" />
+    <Compile Include="Migrations\201710201826295_RemainingSurchargeFeeAndInterchangeFee.Designer.cs">
+      <DependentUpon>201710201826295_RemainingSurchargeFeeAndInterchangeFee.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\AddNewPartner.cs" />
     <Compile Include="Migrations\AddNewPartner.Designer.cs">
       <DependentUpon>AddNewPartner.cs</DependentUpon>
@@ -1485,6 +1489,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201710180534471_ElimineTodosLOsCamposUnique.resx">
       <DependentUpon>201710180534471_ElimineTodosLOsCamposUnique.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710201826295_RemainingSurchargeFeeAndInterchangeFee.resx">
+      <DependentUpon>201710201826295_RemainingSurchargeFeeAndInterchangeFee.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\AddNewPartner.resx">
       <DependentUpon>AddNewPartner.cs</DependentUpon>
