--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -609,6 +609,10 @@
     <Compile Include="Migrations\201710262026269_EditTerminalInactiveHours.Designer.cs">
       <DependentUpon>201710262026269_EditTerminalInactiveHours.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710262053457_TableTerminalUpdatedDeletedSomeFields.cs" />
+    <Compile Include="Migrations\201710262053457_TableTerminalUpdatedDeletedSomeFields.Designer.cs">
+      <DependentUpon>201710262053457_TableTerminalUpdatedDeletedSomeFields.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\AddNewPartner.cs" />
     <Compile Include="Migrations\AddNewPartner.Designer.cs">
       <DependentUpon>AddNewPartner.cs</DependentUpon>
@@ -1743,6 +1747,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201710262026269_EditTerminalInactiveHours.resx">
       <DependentUpon>201710262026269_EditTerminalInactiveHours.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710262053457_TableTerminalUpdatedDeletedSomeFields.resx">
+      <DependentUpon>201710262053457_TableTerminalUpdatedDeletedSomeFields.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\AddNewPartner.resx">
       <DependentUpon>AddNewPartner.cs</DependentUpon>
