--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -613,6 +613,10 @@
     <Compile Include="Migrations\201710262053457_TableTerminalUpdatedDeletedSomeFields.Designer.cs">
       <DependentUpon>201710262053457_TableTerminalUpdatedDeletedSomeFields.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710271521540_updateFieldInactivePeriodTerminal.cs" />
+    <Compile Include="Migrations\201710271521540_updateFieldInactivePeriodTerminal.Designer.cs">
+      <DependentUpon>201710271521540_updateFieldInactivePeriodTerminal.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\AddNewPartner.cs" />
     <Compile Include="Migrations\AddNewPartner.Designer.cs">
       <DependentUpon>AddNewPartner.cs</DependentUpon>
@@ -1751,6 +1755,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201710262053457_TableTerminalUpdatedDeletedSomeFields.resx">
       <DependentUpon>201710262053457_TableTerminalUpdatedDeletedSomeFields.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710271521540_updateFieldInactivePeriodTerminal.resx">
+      <DependentUpon>201710271521540_updateFieldInactivePeriodTerminal.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\AddNewPartner.resx">
       <DependentUpon>AddNewPartner.cs</DependentUpon>
