--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -850,6 +850,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min-superhero.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\cosmo.css" />
     <Content Include="Content\DataTables\css\autoFill.bootstrap.css" />
     <Content Include="Content\DataTables\css\autoFill.bootstrap.min.css" />
     <Content Include="Content\DataTables\css\autoFill.dataTables.css" />
