--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -1017,13 +1017,13 @@
     <Content Include="Octagon\assets\css\Footer-Basic.css" />
     <Content Include="Octagon\assets\css\Map-Clean.css" />
     <Content Include="Octagon\assets\css\Navigation-with-Button1.css" />
+    <Content Include="Octagon\assets\css\sb-admin.css" />
+    <Content Include="Octagon\assets\css\sb-admin.min.css" />
     <Content Include="Octagon\assets\css\sidebar.css" />
     <Content Include="Octagon\assets\css\styles-1.css" />
     <Content Include="Octagon\assets\css\styles.css" />
     <Content Include="Octagon\assets\css\styles.min.css" />
     <Content Include="Octagon\assets\css\styles2.css" />
-    <Content Include="Octagon\assets\css\untitled-1.css" />
-    <Content Include="Octagon\assets\css\untitled.css" />
     <Content Include="Octagon\assets\data\flot-data.js" />
     <Content Include="Octagon\assets\data\morris-data.js" />
     <Content Include="Octagon\assets\fonts\font-awesome.min.css" />
