--- a/OctagonPlatform/packages.config
+++ b/OctagonPlatform/packages.config
@@ -4,6 +4,8 @@
   <package id="AutoMapper" version="6.1.1" targetFramework="net461" />
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
+  <package id="elmah" version="1.2.2" targetFramework="net461" />
+  <package id="elmah.corelibrary" version="1.2.2" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net461" />
   <package id="jQuery" version="3.1.1" targetFramework="net461" />
