--- a/OctagonPlatform/Web.config
+++ b/OctagonPlatform/Web.config
@@ -111,13 +111,13 @@
         <network host="smtp.live.com"
                  enableSsl="true"
                  port="25"
-                 userName="luisrafael.gamez@outlook.com"
-                 password="Vv19477002" />
+                 userName="xyncro.octagon@outlook.com"
+                 password="Xyncro2017" />
       </smtp>
     </mailSettings>
   </system.net>
   <elmah>
-    <errorMail from="luisrafael.gamez@outlook.com" to="yasser.osuna@gmail.com" async="true" smtpPort="0" useSsl="true" />
+    <errorMail from="xyncro.octagon@outlook.com" to="yasser.osuna@gmail.com" async="true" smtpPort="0" useSsl="true" />
     <!--
         See http://code.google.com/p/elmah/wiki/SecuringErrorLogPages for 
         more information on remote access and securing ELMAH.
