add another email to send alert by elmah

--- a/OctagonPlatform/Web.config
+++ b/OctagonPlatform/Web.config
@@ -117,7 +117,7 @@
     </mailSettings>
   </system.net>
   <elmah>
-    <errorMail from="xyncro.octagon@outlook.com" to="yasser.osuna@gmail.com" async="true" smtpPort="0" useSsl="true" />
+    <errorMail from="xyncro.octagon@outlook.com" to="yasser.osuna@gmail.com, hlima@xyncro.net" async="true" smtpPort="0" useSsl="true" />
     <!--
         See http://code.google.com/p/elmah/wiki/SecuringErrorLogPages for 
         more information on remote access and securing ELMAH.
