--- a/OctagonPlatform/Web.config
+++ b/OctagonPlatform/Web.config
@@ -17,9 +17,9 @@
   </configSections>
   <connectionStrings>
     <!--Cada vez que se haga un update database hacerlo tambien para mi data base local-->
-    <add name="LocalConection" connectionString="Server=tcp:xyncro.database.windows.net,1433;Initial Catalog=octagonNewTest;Persist Security Info=False;User ID=xyncroadminsa;Password=xyncro2017!@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;
-         Connection Timeout=30; " providerName="System.Data.SqlClient" />
-    <!--<add name="LocalConection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=Octagon3;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <!--<add name="LocalConection" connectionString="Server=tcp:xyncro.database.windows.net,1433;Initial Catalog=octagonNewTest;Persist Security Info=False;User ID=xyncroadminsa;Password=xyncro2017!@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;
+         Connection Timeout=30; " providerName="System.Data.SqlClient" />-->
+    <add name="LocalConection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=Octagon3;Integrated Security=True" providerName="System.Data.SqlClient" />
     <!--<add name="LocalConection" connectionString="Data Source=DESKTOP-I1KBFAR\SQLEXPRESS;Initial Catalog=octagonPrueba100;Integrated Security=True"
       providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
@@ -30,6 +30,11 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <!-- Calls Customed Error Views -->
+    <customErrors mode="On" defaultRedirect="~/Error">
+      <error redirect="~/Error/NotFound" statusCode="404"/>
+    </customErrors>
+    <!-- End of Calls Customed Error Views -->
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
     <sessionState timeout="2880"></sessionState>
