BadGateway, ServiceUnavailable error views added

--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -1504,6 +1504,8 @@
     <Content Include="Views\Disputes\Index.cshtml" />
     <Content Include="Views\Error\InternalServerError.cshtml" />
     <Content Include="Views\Error\NotFoundError.cshtml" />
+    <Content Include="Views\Error\BadGatewayError.cshtml" />
+    <Content Include="Views\Error\ServiceUnavailableError.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
