--- a/OctagonPlatform/Web.config
+++ b/OctagonPlatform/Web.config
@@ -33,6 +33,9 @@
     <!-- Calls Customed Error Views -->
     <customErrors mode="On" defaultRedirect="~/Error">
       <error redirect="~/Error/NotFound" statusCode="404"/>
+      <error redirect="~/Error/InternalServer" statusCode="500"/>
+      <error redirect="~/Error/BadGateway" statusCode="502"/>
+      <error redirect="~/Error/ServiceUnavailable" statusCode="503"/>
     </customErrors>
     <!-- End of Calls Customed Error Views -->
     <compilation debug="true" targetFramework="4.6.1" />
