--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -1058,6 +1058,7 @@
     <Content Include="Octagon\assets\img\1.jpg" />
     <Content Include="Octagon\assets\img\2.jpg" />
     <Content Include="Octagon\assets\img\3.jpg" />
+    <Content Include="Octagon\assets\img\404.jpg" />
     <Content Include="Octagon\assets\img\carousel1.jpg" />
     <Content Include="Octagon\assets\img\carousel2.jpg" />
     <Content Include="Octagon\assets\img\carousel3.jpg" />
